--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-community/picker": "^1.8.1",
     "@react-native-community/viewpager": "^4.2.2",
+    "@react-native-picker/picker": "^1.9.10",
     "@react-navigation/bottom-tabs": "^5.11.3",
     "@react-navigation/drawer": "^5.11.5",
     "@react-navigation/native": "^5.9.0",
@@ -24,16 +24,23 @@
     "blinkid-react-native": "^5.9.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hook-form": "^6.14.2",
     "react-native": "0.63.4",
+    "react-native-actionsheet": "^2.4.2",
     "react-native-awesome-card-io": "^0.9.0",
+    "react-native-camera": "^3.42.0",
     "react-native-cardscan": "^1.1.26",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^3.1.0",
+    "react-native-form-validator": "^0.3.5",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-google-signin": "^2.1.1",
+    "react-native-image-crop-picker": "^0.35.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-location": "^2.5.0",
     "react-native-maps": "git+https://github.com/react-native-community/react-native-maps.git",
+    "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^4.7.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~1.13.0",
@@ -41,6 +48,7 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-scrollable-tab-view": "^1.0.0",
+    "react-native-selectmultiple-button": "^0.1.105",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^7.1.0"
