--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme"
+      >
       <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyAz1x12T1P8nDYur8yxDPOSV061vMV_TxY"/>
       <activity
             android:name=".SplashActivity"
