--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "react-native-actionsheet": "^2.4.2",
     "react-native-awesome-card-io": "^0.9.0",
     "react-native-camera": "^3.42.0",
-    "react-native-cardscan": "^1.1.26",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^3.1.0",
@@ -38,6 +37,7 @@
     "react-native-google-signin": "^2.1.1",
     "react-native-image-crop-picker": "^0.35.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-location": "^2.5.0",
     "react-native-maps": "git+https://github.com/react-native-community/react-native-maps.git",
     "react-native-masked-text": "^1.13.0",
