--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme"
+      android:usesCleartextTraffic="true"
       >
       <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyAz1x12T1P8nDYur8yxDPOSV061vMV_TxY"/>
       <activity
