--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-awesome-card-io": "^0.9.0",
     "react-native-camera": "^3.42.0",
     "react-native-credit-card-input": "^0.4.1",
+    "react-native-date-picker": "^3.2.9",
     "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^3.1.0",
     "react-native-form-validator": "^0.3.5",
