--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.63.4",
     "react-native-actionsheet": "^2.4.2",
     "react-native-awesome-card-io": "^0.9.0",
+    "react-native-bottomsheet-reanimated": "^0.0.22",
     "react-native-camera": "^3.42.0",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-date-picker": "^3.2.9",
@@ -40,6 +41,7 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-google-signin": "^2.1.1",
     "react-native-image-crop-picker": "^0.35.3",
+    "react-native-interactable-reanimated": "^0.0.8",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-location": "^2.5.0",
