--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^3.1.0",
     "react-native-form-validator": "^0.3.5",
-    "react-native-gesture-handler": "~1.8.0",
+    "react-native-gesture-handler": "^1.10.2",
+    "react-native-google-places-autocomplete": "^2.1.3",
     "react-native-google-signin": "^2.1.1",
     "react-native-image-crop-picker": "^0.35.3",
     "react-native-interactable-reanimated": "^0.0.8",
@@ -46,11 +47,14 @@
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-location": "^2.5.0",
     "react-native-maps": "git+https://github.com/react-native-community/react-native-maps.git",
+    "react-native-maps-directions": "^1.8.0",
     "react-native-masked-text": "^1.13.0",
     "react-native-modal-datetime-picker": "^9.1.0",
     "react-native-paper": "^4.7.0",
+    "react-native-phone-number-input": "^2.0.0",
+    "react-native-popover-tooltip": "^1.1.4",
     "react-native-raw-bottom-sheet": "^2.2.0",
-    "react-native-reanimated": "~1.13.0",
+    "react-native-reanimated": "^1.13.2",
     "react-native-safari-view": "^2.1.0",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "~2.15.0",
@@ -60,6 +64,7 @@
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^7.1.0",
     "react-navigation": "^4.4.3",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
