--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^3.1.0",
+    "react-native-flash-message": "^0.1.23",
     "react-native-form-validator": "^0.3.5",
     "react-native-gesture-handler": "^1.10.2",
     "react-native-google-places-autocomplete": "^2.1.3",
@@ -50,9 +51,11 @@
     "react-native-maps-directions": "^1.8.0",
     "react-native-masked-text": "^1.13.0",
     "react-native-modal-datetime-picker": "^9.1.0",
+    "react-native-modal-popover": "^1.0.0",
     "react-native-paper": "^4.7.0",
     "react-native-phone-number-input": "^2.0.0",
     "react-native-popover-tooltip": "^1.1.4",
+    "react-native-popover-view": "^3.1.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safari-view": "^2.1.0",
