--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -210,6 +210,7 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+    compile project(':react-native-fs')
 }
 
 // Run this once to be able to run the application with BUCK
