--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "react-native-credit-card-input": "^0.4.1",
     "react-native-date-picker": "^3.2.9",
     "react-native-datepicker": "^1.7.2",
+    "react-native-document-picker": "^5.0.0",
     "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^3.1.0",
     "react-native-flash-message": "^0.1.23",
     "react-native-form-validator": "^0.3.5",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.10.2",
     "react-native-google-places-autocomplete": "^2.1.3",
     "react-native-google-signin": "^2.1.1",
