--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-form-validator": "^0.3.5",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.10.2",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-google-places-autocomplete": "^2.1.3",
     "react-native-google-signin": "^2.1.1",
     "react-native-image-crop-picker": "^0.35.3",
@@ -70,6 +71,8 @@
     "react-native-vector-icons": "^7.1.0",
     "react-navigation": "^4.4.3",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "socket.io": "^3.1.2",
+    "socket.io-client": "2.1.1",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
