--- a/ios/FlourichCreator/Info.plist
+++ b/ios/FlourichCreator/Info.plist
@@ -53,5 +53,44 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>AntDesign.ttf</string>
+		<string>Entypo.ttf</string>
+		<string>EvilIcons.ttf</string>
+		<string>Feather.ttf</string>
+		<string>FontAwesome.ttf</string>
+		<string>FontAwesome5_Brands.ttf</string>
+		<string>FontAwesome5_Regular.ttf</string>
+		<string>FontAwesome5_Solid.ttf</string>
+		<string>Foundation.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>MaterialIcons.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>SimpleLineIcons.ttf</string>
+		<string>Octicons.ttf</string>
+		<string>Zocial.ttf</string>
+		<string>Fontisto.ttf</string>
+	</array>
+		<key>NSCameraUsageDescription</key>
+		<string>YOUR TEXT</string>
+		<key>NSFaceIDUsageDescription</key>
+		<string>YOUR TEXT</string>
+		<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+		<string>YOUR TEXT</string>
+		<key>NSLocationAlwaysUsageDescription</key>
+		<string>YOUR TEXT</string>
+		<key>NSLocationTemporaryUsageDescriptionDictionary</key>
+		<dict>
+			<key>YOUR-PURPOSE-KEY</key>
+			<string>YOUR TEXT</string>
+		</dict>
+		<key>NSLocationWhenInUseUsageDescription</key>
+		<string>YOUR TEXT</string>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>YOUR TEXT</string>
+		<key>NSPhotoLibraryAddUsageDescription</key>
+		<string>YOUR TEXT</string>
+
 </dict>
 </plist>
