--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-native-modal-datetime-picker": "^9.1.0",
     "react-native-modal-popover": "^1.0.0",
     "react-native-paper": "^4.7.0",
+    "react-native-permissions": "^3.0.1",
     "react-native-phone-number-input": "^2.0.0",
     "react-native-popover-tooltip": "^1.1.4",
     "react-native-popover-view": "^3.1.1",
