--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-date-picker": "^3.2.9",
     "react-native-datepicker": "^1.7.2",
     "react-native-document-picker": "^5.0.0",
+    "react-native-dropdown-picker": "^4.0.2",
     "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^3.1.0",
     "react-native-flash-message": "^0.1.23",
