--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-awesome-card-io": "^0.9.0",
     "react-native-bottomsheet-reanimated": "^0.0.22",
     "react-native-camera": "^3.42.0",
+    "react-native-cli": "^2.0.1",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-date-picker": "^3.2.9",
     "react-native-datepicker": "^1.7.2",
@@ -46,7 +47,7 @@
     "react-native-gifted-chat": "^0.16.3",
     "react-native-google-places-autocomplete": "^2.1.3",
     "react-native-google-signin": "^2.1.1",
-    "react-native-image-crop-picker": "^0.35.3",
+    "react-native-image-crop-picker": "^0.36.0",
     "react-native-interactable-reanimated": "^0.0.8",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-loading-spinner-overlay": "^2.0.0",
