--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-google-signin": "^2.1.1",
     "react-native-image-crop-picker": "^0.36.0",
     "react-native-interactable-reanimated": "^0.0.8",
+    "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-location": "^2.5.0",
