--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@react-native-community/datetimepicker": "^3.0.9",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-community/viewpager": "^4.2.2",
     "@react-native-picker/picker": "^1.9.10",
     "@react-navigation/bottom-tabs": "^5.11.3",
     "@react-navigation/drawer": "^5.11.5",
@@ -23,49 +22,37 @@
     "accordion-collapse-react-native": "^0.4.0",
     "axios": "^0.21.1",
     "blinkid-react-native": "^5.9.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
     "react-hook-form": "^6.14.2",
     "react-native": "0.63.4",
-    "react-native-actionsheet": "^2.4.2",
     "react-native-awesome-card-io": "^0.9.0",
-    "react-native-bottomsheet-reanimated": "^0.0.22",
     "react-native-camera": "^3.42.0",
     "react-native-cli": "^2.0.1",
-    "react-native-credit-card-input": "^0.4.1",
-    "react-native-date-picker": "^3.2.9",
-    "react-native-datepicker": "^1.7.2",
     "react-native-document-picker": "^5.0.0",
     "react-native-dropdown-picker": "^4.0.2",
-    "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^3.1.0",
     "react-native-flash-message": "^0.1.23",
     "react-native-form-validator": "^0.3.5",
-    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.10.2",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-google-places-autocomplete": "^2.1.3",
     "react-native-google-signin": "^2.1.1",
     "react-native-image-crop-picker": "^0.36.0",
-    "react-native-interactable-reanimated": "^0.0.8",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-loading-spinner-overlay": "^2.0.0",
-    "react-native-location": "^2.5.0",
     "react-native-maps": "git+https://github.com/react-native-community/react-native-maps.git",
-    "react-native-maps-directions": "^1.8.0",
     "react-native-masked-text": "^1.13.0",
     "react-native-modal-datetime-picker": "^9.1.0",
     "react-native-modal-popover": "^1.0.0",
-    "react-native-paper": "^4.7.0",
     "react-native-permissions": "^3.0.1",
     "react-native-phone-number-input": "^2.0.0",
-    "react-native-popover-tooltip": "^1.1.4",
     "react-native-popover-view": "^3.1.1",
+    "react-native-ratings": "^7.4.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^1.13.2",
-    "react-native-safari-view": "^2.1.0",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-scrollable-tab-view": "^1.0.0",
@@ -73,20 +60,14 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^7.1.0",
-    "react-navigation": "^4.4.3",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "socket.io": "^3.1.2",
-    "socket.io-client": "2.1.1",
-    "styled-components": "^5.2.1"
+    "socket.io-client": "2.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
     "eslint": "^7.18.0",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
