--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "react-native-vector-icons": "^7.1.0",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "socket.io": "^3.1.2",
-    "socket.io-client": "2.1.1"
+    "socket.io-client": "2.1.1",
+    "toggle-switch-react-native": "^3.2.0"
   },
   "devDependencies": {
     "@react-native-community/eslint-config": "^2.0.0",
