--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/datetimepicker": "^3.0.9",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/viewpager": "^5.0.11",
     "@react-native-picker/picker": "^1.9.10",
     "@react-navigation/bottom-tabs": "^5.11.3",
     "@react-navigation/drawer": "^5.11.5",
