--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios —-simulator 'iPhone 11 Pro'",
+    "ios": "npx react-native run-ios --simulator='iPhone 11 Pro'",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
+    "@ant-design/icons-react-native": "^2.2.1",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "^3.0.9",
     "@react-native-community/geolocation": "^2.0.2",
@@ -22,7 +23,6 @@
     "@react-navigation/stack": "^5.13.0",
     "accordion-collapse-react-native": "^0.4.0",
     "axios": "^0.21.1",
-    "blinkid-react-native": "^5.9.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "16.13.1",
@@ -41,6 +41,7 @@
     "react-native-google-places-autocomplete": "^2.1.3",
     "react-native-google-signin": "^2.1.1",
     "react-native-image-crop-picker": "^0.36.0",
+    "react-native-image-placeholder": "^1.0.14",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-linear-gradient": "^2.5.6",
@@ -49,6 +50,7 @@
     "react-native-masked-text": "^1.13.0",
     "react-native-modal-datetime-picker": "^9.1.0",
     "react-native-modal-popover": "^1.0.0",
+    "react-native-modalbox": "^2.0.2",
     "react-native-permissions": "^3.0.1",
     "react-native-phone-number-input": "^2.0.0",
     "react-native-popover-view": "^3.1.1",
@@ -63,7 +65,6 @@
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^7.1.0",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
-    "socket.io": "^3.1.2",
     "socket.io-client": "4.0.0",
     "toggle-switch-react-native": "^3.2.0"
   },
