--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-google-signin": "^2.1.1",
     "react-native-image-crop-picker": "^0.36.0",
     "react-native-image-placeholder": "^1.0.14",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-linear-gradient": "^2.5.6",
