--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^7.1.0",
+    "react-native-video": "^5.1.1",
+    "react-native-video-player": "^0.10.1",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "socket.io-client": "4.0.0",
     "toggle-switch-react-native": "^3.2.0"
