added social login

--- a/ios/FlourichCreator/Info.plist
+++ b/ios/FlourichCreator/Info.plist
@@ -28,6 +28,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>com.googleusercontent.apps.978751469400-c303fj6md5lksgp776k57ov17v7fen02</string>
+      			<string>fb1364584603914038</string>
 			</array>
 		</dict>
 	</array>
@@ -100,5 +101,16 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>FacebookAppID</key>
+	<string>1364584603914038</string>
+	<key>FacebookDisplayName</key>
+	<string>Flourich</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+	<string>fbapi</string>
+	<string>fb-messenger-share-api</string>
+	<string>fbauth2</string>
+	<string>fbshareextension</string>
+	</array>
 </dict>
 </plist>
