--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^2.1.1",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "^3.0.9",
     "@react-native-community/geolocation": "^2.0.2",
@@ -34,6 +35,7 @@
     "react-native-document-picker": "^5.0.0",
     "react-native-dropdown-picker": "^4.0.2",
     "react-native-elements": "^3.1.0",
+    "react-native-fbsdk-next": "^4.0.0",
     "react-native-flash-message": "^0.1.23",
     "react-native-form-validator": "^0.3.5",
     "react-native-gesture-handler": "^1.10.2",
