--- a/ios/FlourichCreator/Info.plist
+++ b/ios/FlourichCreator/Info.plist
@@ -56,6 +56,8 @@
 	<string>YOUR TEXT</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>YOUR TEXT</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>YOUR TEXT</string>
 	<key>NSLocationTemporaryUsageDescriptionDictionary</key>
 	<dict>
 		<key>YOUR-PURPOSE-KEY</key>
