--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
       android:usesCleartextTraffic="true"
       >
       <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyAz1x12T1P8nDYur8yxDPOSV061vMV_TxY"/>
+      <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+
       <activity
             android:name=".SplashActivity"
             android:theme="@style/SplashTheme"
