--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-native-screens": "~2.15.0",
     "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-selectmultiple-button": "^0.1.105",
+    "react-native-simple-toast": "^1.1.3",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^7.1.0",
