--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-document-picker": "^5.0.0",
     "react-native-dropdown-picker": "^4.0.2",
     "react-native-elements": "^3.1.0",
+    "react-native-fast-image": "^8.3.4",
     "react-native-fbsdk-next": "^4.0.0",
     "react-native-flash-message": "^0.1.23",
     "react-native-form-validator": "^0.3.5",
