--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-native-simple-toast": "^1.1.3",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-swipeout": "^2.3.6",
     "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.1",
     "react-native-video-player": "^0.10.1",
