--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-native-firebase/app": "^11.2.0",
+    "@react-native-firebase/storage": "^11.2.0",
     "@react-native-picker/picker": "^1.9.10",
     "@react-navigation/bottom-tabs": "^5.11.3",
     "@react-navigation/drawer": "^5.11.5",
